# cryptopals-diffie-hellman

./: Cargo.toml  README.md
src/: attacker.rs  client.rs  lib.rs  main.rs  network.rs  participant.rs  server.rs  util.rs
src/attacker/: midm.rs  midm_g1.rs  midm_gp.rs  midm_gp_min1.rs  mod.rs
