[package]
name = "diffie-hellman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num-bigint = { version = "0.4", features = ["rand"] }
num-traits = "^0.2.15"
const-decoder = "0.2.0"
rand = "0.8"
aes = "^0.8.1"
cbc = "^0.1.2"
sha1 = "^0.10.5"